--- a/package.json
+++ b/package.json
@@ -8,16 +8,20 @@
     "build": "tsc && vite build"
   },
   "dependencies": {
+    "ag-grid-community": "^29.1.0",
+    "ag-grid-react": "^29.1.0",
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
     "react-table": "^7.8.0",
-    "styled-components": "^5.3.8"
+    "styled-components": "^5.3.8",
+    "twin.macro": "^3.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-table": "^7.7.14",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
