--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ag-grid-community": "^29.1.0",
     "ag-grid-react": "^29.1.0",
     "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
